--- a/style.css
+++ b/style.css
@@ -1,9 +1,33 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
 }
 span{
     color: orange;
+}
+section{
+    display: flex;
+}
+.half-width{
+    width: 50%;
+   padding-left: 5%;
+}
+.half-width img{
+    width: 80%;
+    
+}
+.hire-me{
+    text-decoration: none;
+    background-image: linear-gradient( tomato, yellowgreen );
+    padding: 10px 30px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
