footer and expe added

--- a/style.css
+++ b/style.css
@@ -5,11 +5,15 @@ body{
 h1{
     font-size: 50px;
 }
-span{
+h2{
+    font-size: 40px;
+}
+.orange-color{
     color: orange;
 }
-section{
+.flex-continer{
     display: flex;
+    margin-bottom: 100px;
 }
 .half-width{
     width: 50%;
@@ -30,4 +34,44 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+.download-resume{
+    text-decoration: none;
+    background-image: linear-gradient(orange, yellowgreen);
+    padding: 10px 40px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+}
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    
+}
+.experience{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+    
+}
+#full-stack-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(orange, salmon);
+    border-image-slice: 1;
+}
+#baby-dev{
+    border-left: 7px solid;
+    border-image: linear-gradient(blue, cyan);
+    border-image-slice: 1;
+}
+footer{
+    text-align: center;
 }
